--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <main>
-            <h1>Sketchy!</h1>
+            <h1 class="font-medium">Sketchy!</h1>
+            <div class="container-zero">
+                <div id="container-one-canvas" class="container-one-canvas" style="width: 900px; height: 900px;">
+                </div>
+            </div>
         </main>
     </body>
 </html>
