--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <main>
             <h1 class="font-medium">Sketchy!</h1>
+            <label for="canvas-size">Canvas Size:</label>
+            <input type="number" id="canvas-size" name="canvas-size" min="1" max="100" step="1" value="16"> <button id="draw-canvas">Draw Canvas</button>
             <div class="container-zero">
                 <div id="container-one-canvas" class="container-one-canvas" style="width: 900px; height: 900px;">
                 </div>
