--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <h1 class="font-medium">Sketchy!</h1>
             <label for="canvas-size">Canvas Size:</label>
             <input type="number" id="canvas-size" name="canvas-size" min="1" max="100" step="1" value="16"> <button id="draw-canvas">Draw Canvas</button>
+            <br>
+            <input type="radio" name="color" id="optionRed" value="red" checked>
+            <label for="optionRed">Red</label>
+            <input type="radio" name="color" id="optionRandom" value="random">
+            <label for="optionRandom">Random</label>
             <div class="container-zero">
                 <div id="container-one-canvas" class="container-one-canvas" style="width: 900px; height: 900px;">
                 </div>
